Fixed event date/content alignment issue

--- a/versions/v4/static/scss/_views-front-page.scss
+++ b/versions/v4/static/scss/_views-front-page.scss
@@ -550,7 +550,7 @@
   }
 }
 
-.fp-event-date,
+.fp-event-when,
 .fp-event-content {
   display: table-cell;
   vertical-align: top;
